# ctx-pick

./: .gitignore  Cargo.toml  README.md
queries/typescript/: tags.scm
src/: config.rs  display.rs  error.rs  file_resolver.rs  main.rs  symbol_extractor.rs  types.rs
