[package]
name = "ctx-pick"
description = "A CLI tool to concatenate files for LLM context"
license = "MIT"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/westoncb/ctx-pick"
keywords = ["cli", "files", "markdown", "llm"]
categories = ["command-line-utilities"]
authors = ["Weston C. Beecroft <westoncb@gmail.com>"]
readme = "README.md"

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.39", features = ["derive"] }
console = "0.15.11"
glob = "0.3.2"
pathdiff = "0.2.3"
thiserror = "2.0.12"
tree-sitter = "0.25.6"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[[bin]]
name = "ctx-pick"
path = "src/main.rs"
